syntax = "proto3";

package book;

import "google/protobuf/timestamp.proto";

option go_package = "./book";

message Book {
  int64 id = 1;
  string title = 2;
  string isbn = 3;
  int32 copies = 4;
  google.protobuf.Timestamp date_of_publication = 5;
  int64 author_id = 6;
  int64 category_id = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message CreateBookRequest {
  string title = 1;
  string isbn = 2;
  int32 copies = 3;
  google.protobuf.Timestamp date_of_publication = 4;
  int64 author_id = 5;
  int64 category_id = 6;
}

message GetDetailBookRequest {
  int64 id = 1;
}

message GetAuthorResponse {
  int64 id = 1;
  string name = 2;
  string bio = 3;
  string date_of_birth = 4;
}

message GetCategoryResponse {
  int64 id = 1;
  string name = 2;
}

message GetBookResponse {
  int64 id = 1;
  string title = 2;
  string isbn = 3;
  int32 copies = 4;
  string date_of_publication = 5;
  GetAuthorResponse author = 6;
  GetCategoryResponse category = 7;
}

message UpdateBookRequest {
  int64 id = 1;
  string title = 2;
  string isbn = 3;
  int32 copies = 4;
  google.protobuf.Timestamp date_of_publication = 5;
  int64 author_id = 6;
  int64 category_id = 7;
}

message DeleteBookRequest {
  int64 id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}

message GetAllBooksRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetAllBooksResponse {
  repeated GetBookResponse items = 1;
  int32 total_count = 2;
}

service BookService {
  rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
  rpc GetBookById(GetDetailBookRequest) returns (GetBookResponse);
  rpc CreateBook(CreateBookRequest) returns (Book);
  rpc UpdateBook(UpdateBookRequest) returns (Book);
  rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
}
